build_output.txt
   Compiling archinstall-tui v0.1.0 (/home/l4tm/archinstall)
error[E0308]: mismatched types
    --> src/main.rs:1714:18
     |
1714 |         .percent(app_state.progress);
     |          ------- ^^^^^^^^^^^^^^^^^^ expected `u16`, found `u8`
     |          |
     |          arguments to this method are incorrect
     |
note: method defined here
    --> /home/l4tm/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/ratatui-0.29.0/src/widgets/gauge.rs:72:12
     |
72   |     pub fn percent(mut self, percent: u16) -> Self {
     |            ^^^^^^^
help: you can convert a `u8` to a `u16`
     |
1714 |         .percent(app_state.progress.into());
     |                                    +++++++

error[E0308]: mismatched types
    --> src/main.rs:1807:18
     |
1807 |         .percent(app_state.progress);
     |          ------- ^^^^^^^^^^^^^^^^^^ expected `u16`, found `u8`
     |          |
     |          arguments to this method are incorrect
     |
note: method defined here
    --> /home/l4tm/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/ratatui-0.29.0/src/widgets/gauge.rs:72:12
     |
72   |     pub fn percent(mut self, percent: u16) -> Self {
     |            ^^^^^^^
help: you can convert a `u8` to a `u16`
     |
1807 |         .percent(app_state.progress.into());
     |                                    +++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `archinstall-tui` (bin "archinstall-tui") due to 2 previous errors
